# TurboLabel

./: .gitignore  README.md  pre_annotate.py  pyproject.toml  requirements.txt  settings.yaml
cache/convertor/: labelstudio_convertor.py
core/: annotation_processor.py  config_loader.py  conversion_loader.py  model_loader.py  numpy_encoder.py  visualize_annotations.py
schema/: labelstudio.txt
ultralytics/nn/: tasks.py
ultralytics/nn/attention/: EMCA.py  SimAMWithSlicing.py
